初始化上传

--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,13 @@
             <artifactId>commons-io</artifactId>
             <version>2.11.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+            <version>2.2.3.RELEASE</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
     <profiles>
         <profile>
